# UNDOKAI-QRCODE

./: .env.example  .gitignore  EDGE_CASES_REVIEW_REPORT.md  EDGE_CASES_TESTING_SUMMARY.md  README.md  app.py  app_factory.py  auth.py  checkin-agents.md  create_test_data.py  delivery-agents.md  email-agents.md  health_check.sh  main-agents.md  models.py  participants-agents.md  pyproject.toml  replit.md  routes.py  run.sh  run_app.py  test_app.py  test_intensive.sh  utils.py
.github/workflows/: ci.yml
attached_assets/: .env_1756561147942.example  Dockerfile_1756561147943  Pasted-Aqui-est-um-prompt-inicial-e-estruturado-pronto-para-iniciar-o-processo-de-cria-o-do-seu-aplicati-1756561212198_1756561212199.txt  README_1756561147943.md  app_1756561147942.py  checkin-agents_1756561143087.md  delivery-agents_1756561143087.md  email-agents_1756561143088.md  imagem-lightera-logo_1756562766390.avif  main-agents_1756561143089.md  participants-agents_1756561143089.md  projeto-completo_1756561143090.md  requirements_1756561147944.txt  run_1756561147945.sh  script_1756561143091.py
instance/: bundokai.db
scripts/: generate_sample_data.py  send_qr_emails.py  setup_database.py
static/: manifest.json
static/css/: custom.css  dashboard.css
static/js/: admin.js  (+4 more)
templates/: 404.html  500.html  admin.html  admin_login.html  base.html  base_admin.html  checkin_search.html  dashboard.html  delivery.html  entregas_list.html  index.html  inventory.html  register.html  scanner.html  success.html  test_base.html  test_scanner.html  user_index.html  user_qr_lookup.html
tests/: __init__.py  conftest.py  test_edge_cases.py  test_frontend_edge_cases.js  test_models.py  test_routes.py  test_utils.py
